tests/performance-test/logging-events/deploy/esroute.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: elastic-service-telemetry
  labels:
    common.k8s.elastic.co/type: elasticsearch
    elasticsearch.k8s.elastic.co/cluster-name: elasticsearch
spec:
  to:
    kind: Service
    name: elasticsearch-es-http
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
